[package]
name = "autodep-cli"
description = "A command-line utility to manage build files in monorepo setups"
authors = ["Sam Folorunsho"]
rust-version = "1.74"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"


# Cargo.toml key reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4.12", features = ["cargo", "help"] } # TODO: help-template
serde = { version = "1.0.194" }
serde_yaml = "0.9.30"
config = { version = "0.13.1", features = ["yaml", "json"] }
swc_common = { version = "0.33.12" }
swc_ecma_ast = { version = "0.110.15" }
swc_ecma_parser = { version = "0.141.33" }
swc_ecma_visit = { version = "0.96.15" }
log = { version = "0.4.20" }
env_logger = { version = "0.10.1" }
rustpython-parser = { version = "0.3.0" }
thiserror = "1.0.56"

[dev-dependencies]
tempfile = "3"