[package]
name = "autodep-cli"
description = "A command-line utility to manage build files in monorepo setups"
authors = ["Sam Folorunsho"]
rust-version = "1.74"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"


# Cargo.toml key reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4", features = ["cargo", "help"] } # TODO: help-template
serde = { version = "1.0" }
serde_json = "1.0"
serde_yaml = "0.9"
config = { version = "0.13", features = ["yaml", "json"] }
swc_common = { version = "0.33" }
swc_ecma_ast = { version = "0.110" }
swc_atoms = { version = "0.6" }
swc_ecma_parser = { version = "0.141" }
swc_ecma_loader = { version = "0.45", features = ["node", "tsc"] }
swc_ecma_transforms = { version = "0.227", features = [ 
  "module",
  "react",
  "typescript"
] }
swc_ecma_visit = { version = "0.96" }
log = { version = "0.4" }
env_logger = { version = "0.10" }
rustpython-parser = { version = "0.3" }
thiserror = "1.0"
tsconfig = "0.2"

[dev-dependencies]
tempfile = "3"